--- a/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
@@ -240,7 +240,9 @@
                                 </Grid.ColumnDefinitions>
                                 <StackPanel>
                                     <DockPanel Margin="0,0,0,3">
-                                        <CheckBox DockPanel.Dock="Right" Content="ND" Padding="2,0,0,0" IsChecked="{Binding Config.IsAutoExpWithND}" Visibility="{Binding Config.CFW.IsNDPort,Converter={StaticResource bool2VisibilityConverter}}" Margin="0,0,5,0"/>
+                                        <StackPanel DockPanel.Dock="Right" VerticalAlignment="Center"  Visibility="{Binding Config.IsAutoExpose,Converter={StaticResource bool2VisibilityConverter1}}">
+                                            <CheckBox Content="ND" Padding="2,0,0,0" IsChecked="{Binding Config.IsAutoExpWithND}" Visibility="{Binding Config.CFW.IsNDPort,Converter={StaticResource bool2VisibilityConverter}}" Margin="0,0,5,0"/>
+                                        </StackPanel>
                                         <Grid Width="20" Margin="5,0" DockPanel.Dock="Right" HorizontalAlignment="Left">
                                             <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="16" Foreground="{DynamicResource GlobalTextBrush}">
                                                 <TextBlock.RenderTransform>
