--- a/Plugins/Pattern/PatternWindow.xaml
+++ b/Plugins/Pattern/PatternWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.Engine.Pattern.PatternWindow"
+﻿<Window x:Class="Pattern.PatternWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Engine.Pattern"
+        xmlns:local="clr-namespace:Pattern"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:PatternManager}"
         Title="图卡生成工具" Height="600" Width="1000" Background="{DynamicResource GlobalBackground}" WindowStartupLocation="CenterOwner"  Initialized="Window_Initialized">
