--- a/Engine/ColorVision.Engine/Rbac/UserInfoWindow.xaml
+++ b/Engine/ColorVision.Engine/Rbac/UserInfoWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:properties ="clr-namespace:ColorVision.Engine.Properties"
         xmlns:hc ="https://handyorg.github.io/handycontrol"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:UserManager}"
+        d:DataContext="{d:DesignInstance local:RbacManager}"
         Title="用户" Height="350" Width="400" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized">
     <Grid Margin="5">
         <Grid.RowDefinitions>
